; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/sproto/extr_sproto.c_sproto_protoname.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/sproto/extr_sproto.c_sproto_protoname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sproto = type { i32 }
%struct.protocol = type { i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @sproto_protoname(%struct.sproto* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.sproto*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.protocol*, align 8
  store %struct.sproto* %0, %struct.sproto** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.sproto*, %struct.sproto** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call %struct.protocol* @query_proto(%struct.sproto* %7, i32 %8)
  store %struct.protocol* %9, %struct.protocol** %6, align 8
  %10 = load %struct.protocol*, %struct.protocol** %6, align 8
  %11 = icmp ne %struct.protocol* %10, null
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = load %struct.protocol*, %struct.protocol** %6, align 8
  %14 = getelementptr inbounds %struct.protocol, %struct.protocol* %13, i32 0, i32 0
  %15 = load i8*, i8** %14, align 8
  store i8* %15, i8** %3, align 8
  br label %17

16:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %17

17:                                               ; preds = %16, %12
  %18 = load i8*, i8** %3, align 8
  ret i8* %18
}

declare dso_local %struct.protocol* @query_proto(%struct.sproto*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
